# browserd

./: .gitignore  Makefile  README.md  flags.gn  pytest.ini
browserd/: BUILD.gn  app.cc  app.h  browser_runtime.h  embedder_switches.cc  embedder_switches.h  embedder_switches_test.cc  headless_runtime.cc  headless_runtime.h  main.cc  switches.h  user_data_dir.cc  user_data_dir.h
browserd/chrome/: browserd-Info.plist  browserd_chrome_main.cc  browserd_chrome_main.h  browserd_chrome_main_delegate.cc  browserd_chrome_main_delegate.h  content_browser_client.cc  content_browser_client.h  main_extra_parts.cc  main_extra_parts.h  native_chrome_runtime.cc  native_chrome_runtime.h  platform_setup.cc  platform_setup.h  platform_setup_mac.mm
browserd/core/: browser_controller.cc  browser_controller.h  browser_interactions.cc  browser_result.cc  browser_result.h  devtools_evaluator.h
browserd/embed/: README.md  browserd_embed.cc  browserd_embed.h  browserd_embed_lifecycle_smoke.cc  browserd_embed_smoke.cc
browserd/gui/: aura_context.cc  aura_context.h  browser_context.cc  browser_context.h  browser_main_parts.cc  browser_main_parts.h  content_browser_client.cc  content_browser_client.h  content_client.cc  content_client.h  content_renderer_client.cc  content_renderer_client.h  fill_layout.cc  fill_layout.h  gui_runtime.cc  gui_runtime.h  gui_window.h  gui_window_aura.cc  gui_window_mac.mm  mac_init.h  mac_init.mm  main_delegate.cc  main_delegate.h  runtime_options.h
browserd/mcp/: BUILD.gn  mcp_http_transport.cc  mcp_http_transport.h  mcp_ipc_transport.cc  mcp_ipc_transport.h  mcp_ipc_transport_posix.cc  mcp_ipc_transport_win.cc  mcp_server.cc  mcp_server.h  mcp_tool.cc  mcp_tool.h  mcp_transport.cc  mcp_transport.h
browserd/mcp/tools/: cookie_tools.cc  cookie_tools.h  evaluate_tools.cc  evaluate_tools.h  interaction_tools.cc  interaction_tools.h  navigation_tools.cc  navigation_tools.h  snapshot_tools.cc  snapshot_tools.h  tab_tools.cc  tab_tools.h  wait_tools.cc  wait_tools.h
browserd/startup/: browserd_main.cc  browserd_main.h
examples/rust_embed_smoke/: main.rs
packaging/systemd/: browserd.env.example  browserd.service
patches/: config.json
patches/core/: .patches  0001-webdriver-return-false-unconditionally.patch  0002-automation-infobar-disable-controlled-by-automated-t.patch  0003-useragent-strip-HeadlessChrome-token-from-UA-and-bra.patch  0004-cdp-disable-setAutomationOverride-side-effects.patch  0005-automation-disable-AutomationControlled-from-headles.patch  0006-devtools-remove-browser-level-DevToolsAgentHost-crea.patch  0007-chrome-inject-chrome-object-via-native-V8-FunctionTe.patch  0008-brand-use-Google-Chrome-for-Sec-CH-UA-brand-list.patch  0009-plugins-always-report-PDF-viewer-as-available.patch  0010-window-add-browser-chrome-offset-to-outerHeight.patch  0011-notifications-return-ASK-instead-of-DENIED-when-serv.patch  0012-window-set-default-viewport-to-1920x942-maximized-on.patch  0013-netinfo-report-realistic-RTT-when-network-quality-un.patch  0014-window-preserve-screen-position-in-headless-SetBound.patch  0015-window-re-apply-frame-bounds-on-RenderWidgetHostView.patch  0016-console-prevent-Error-property-getter-side-effects-d.patch  0017-canvas-apply-deterministic-noise-to-getImageData-pix.patch  0018-build-gate-views-examples-icu-data-bundle.patch
patches/optional/: .patches  0001-audio-add-per-session-noise-to-AudioBuffer-data.patch
scripts/: apply.sh  build.sh  export.sh  fetch.sh  lib.sh  rebase.sh  unapply.sh  verify.sh
tests/: conftest.py  mcp_client.py  test_commercial.py  test_fingerprint.py  test_http_transport.py  test_ipc_transport.py  test_iphey.py  test_nowsecure.py  test_pixelscan.py  test_sannysoft.py  test_smoke.py
