is_debug = false
is_official_build = true
symbol_level = 0
proprietary_codecs = true
ffmpeg_branding = "Chrome"
enable_widevine = true
is_component_build = false
blink_symbol_level = 0
chrome_pgo_phase = 0
headless_use_embedded_resources = true
headless_enable_commands = false
icu_use_data_file = false
v8_use_external_startup_data = false
use_static_angle = true
enable_validating_command_decoder = true
root_extra_deps = [ "//browserd" ]
