import("//build/config/compiler/compiler.gni")
import("//build/config/ui.gni")
import("//headless/headless.gni")

source_set("runtime") {
  sources = [ "browser_runtime.h" ]

  deps = [
    "//content/public/browser",
    "//ui/gfx/geometry",
    "//url",
  ]
}

source_set("browserd_core") {
  sources = [
    "core/browser_controller.cc",
    "core/browser_controller.h",
    "core/browser_interactions.cc",
    "core/browser_result.cc",
    "core/browser_result.h",
  ]

  deps = [
    ":runtime",
    "//base",
    "//components/input",
    "//components/viz/common",
    "//content/public/browser",
    "//content/public/common",
    "//net",
    "//services/network/public/mojom",
    "//skia",
    "//third_party/blink/public/common",
    "//ui/accessibility",
    "//ui/base",
    "//ui/events",
    "//ui/events:dom_keycode_converter",
    "//ui/gfx",
    "//ui/gfx/codec",
    "//url",
  ]
}

source_set("embedder_switches") {
  sources = [
    "embedder_switches.cc",
    "embedder_switches.h",
  ]

  deps = [
    "//base",
    "//content/public/common",
  ]
}

executable("browserd") {
  configs -= [ "//build/config/compiler:thinlto_optimize_default" ]
  configs += [ "//build/config/compiler:thinlto_optimize_max" ]

  sources = [
    "main.cc",
    "switches.h",
  ]

  deps = [
    ":browserd_lib",
    ":browserd_runtime_lib",
    "//components/os_crypt/common:switches",
    "//content/public/app",
    "//headless:headless_shell_lib",
    "//sandbox/policy",
    "//ui/gl",
    "//v8:v8_headers",
  ]

  if (is_mac) {
    deps += [ "//sandbox/mac:seatbelt" ]
  }
}

shared_library("browserd_embed") {
  sources = [
    "embed/browserd_embed.cc",
    "embed/browserd_embed.h",
  ]

  deps = [
    ":browserd_core",
    ":embedder_switches",
    ":browserd_runtime_lib",
    ":runtime",
    "//base",
    "//content/public/common",
    "//headless:headless_shell_lib",
    "//ui/gfx/geometry",
    "//url",
  ]
}

executable("browserd_embed_smoke") {
  sources = [ "embed/browserd_embed_smoke.cc" ]

  deps = [ ":browserd_embed" ]
}

executable("browserd_embed_lifecycle_smoke") {
  sources = [ "embed/browserd_embed_lifecycle_smoke.cc" ]

  deps = [ ":browserd_embed" ]
}

executable("browserd_embedder_switches_test") {
  sources = [ "embedder_switches_test.cc" ]

  deps = [
    ":browserd_runtime_lib",
    ":embedder_switches",
    "//base",
    "//content/public/common",
  ]
}

source_set("browserd_runtime_lib") {
  defines = []

  sources = [
    "gui/browser_context.cc",
    "gui/browser_context.h",
    "gui/browser_main_parts.cc",
    "gui/browser_main_parts.h",
    "gui/content_browser_client.cc",
    "gui/content_browser_client.h",
    "gui/content_client.cc",
    "gui/content_client.h",
    "gui/content_renderer_client.cc",
    "gui/content_renderer_client.h",
    "gui/gui_runtime.cc",
    "gui/gui_runtime.h",
    "gui/gui_window.h",
    "gui/main_delegate.cc",
    "gui/main_delegate.h",
    "gui/runtime_options.h",
    "headless_runtime.cc",
    "headless_runtime.h",
    "startup/browserd_main.cc",
    "startup/browserd_main.h",
    "switches.h",
    "user_data_dir.cc",
    "user_data_dir.h",
  ]

  if (is_mac) {
    sources += [
      "gui/gui_window_mac.mm",
      "gui/mac_init.h",
      "gui/mac_init.mm",
    ]
    frameworks = [
      "AppKit.framework",
      "Cocoa.framework",
    ]
  } else if (use_aura) {
    sources += [
      "gui/aura_context.cc",
      "gui/aura_context.h",
      "gui/fill_layout.cc",
      "gui/fill_layout.h",
      "gui/gui_window_aura.cc",
    ]
  }

  deps = [
    ":embedder_switches",
    ":runtime",
    "//base",
    "//components/embedder_support:user_agent",
    "//content/public/browser",
    "//content/public/app",
    "//content/public/common",
    "//content/public/renderer",
    "//headless:headless_renderer",
    "//headless:headless_shell_lib",
    "//sandbox/policy",
    "//ui/base",
    "//ui/display",
    "//ui/gfx/geometry",
    "//ui/gl",
    "//url",
  ]

  if (is_mac) {
    deps += [
      "//components/os_crypt/common:switches",
      "//sandbox/mac:seatbelt",
    ]
  }

  if (headless_use_embedded_resources) {
    defines += [ "HEADLESS_USE_EMBEDDED_RESOURCES" ]
    deps += [
      "//headless:embedded_resource_pack_data",
      "//headless:embedded_resource_pack_strings",
    ]
  }

  if (use_aura && !is_mac) {
    deps += [
      "//ui/aura",
      "//ui/events",
      "//ui/platform_window",
      "//ui/wm",
      "//ui/wm/public",
    ]
  }
}

source_set("browserd_lib") {
  sources = [
    "app.cc",
    "app.h",
  ]

  deps = [
    ":browserd_core",
    ":browserd_runtime_lib",
    ":runtime",
    "//base",
    "//browserd/mcp",
    "//headless:headless_shell_lib",
  ]
}
